@@ -765,16 +765,17 @@ void showPackageChanges(const Cache& cache, Colorizer& colorizer, WA::Type actio
 
 Resolver::CallbackType generateManagementPrompt(const shared_ptr< const Config >& config,
 		const shared_ptr< const Cache >& cache, const shared_ptr< Worker >& worker,
-		bool showSizeChanges, bool showNotPreferred,
+		bool showNotPreferred,
 		const set< string >& purgedPackageNames, bool& addArgumentsFlag, bool& thereIsNothingToDo)
 {
-	auto result = [&config, &cache, &worker, showSizeChanges, showNotPreferred,
+	auto result = [&config, &cache, &worker, showNotPreferred,
 			&purgedPackageNames, &addArgumentsFlag, &thereIsNothingToDo]
 			(const Resolver::Offer& offer) -> Resolver::UserAnswer::Type
 	{
 		addArgumentsFlag = false;
 		thereIsNothingToDo = false;
 
+		bool showSizeChanges = config->getBool("cupt::console::actions-preview::show-size-changes");
 		bool showVersions = config->getBool("cupt::console::actions-preview::show-versions");
 		auto showReasons = config->getBool("cupt::resolver::track-reasons");
 		auto showSummary = config->getBool("cupt::console::actions-preview::show-summary");
@@ -892,8 +893,7 @@ Resolver::CallbackType generateManagementPrompt(const shared_ptr< const Config >
 }
 
 void parseManagementOptions(Context& context, ManagePackages::Mode mode,
-		vector< string >& packageExpressions,
-		bool& showSizeChanges, bool& showNotPreferred)
+		vector< string >& packageExpressions, bool& showNotPreferred)
 {
 	bpo::options_description options;
 	options.add_options()
@@ -978,8 +978,11 @@ void parseManagementOptions(Context& context, ManagePackages::Mode mode,
 	{
 		config->setScalar("cupt::console::actions-preview::show-versions", "yes");
 	}
+	if (variables.count("show-size-changes"))
+	{
+		config->setScalar("cupt::console::actions-preview::show-size-changes", "yes");
+	}
 
-	showSizeChanges = variables.count("show-size-changes");
 	string showNotPreferredConfigValue = config->getString("cupt::console::actions-preview::show-not-preferred");
 	showNotPreferred = variables.count("show-not-preferred") ||
 			showNotPreferredConfigValue == "yes" ||
@@ -1001,9 +1004,8 @@ int managePackages(Context& context, ManagePackages::Mode mode)
 	Cache::memoize = true;
 
 	vector< string > packageExpressions;
-	bool showSizeChanges, showNotPreferred;
-	parseManagementOptions(context, mode, packageExpressions,
-			showSizeChanges, showNotPreferred);
+	bool showNotPreferred;
+	parseManagementOptions(context, mode, packageExpressions, showNotPreferred);
 
 	unrollFileArguments(packageExpressions);
 
@@ -1071,8 +1073,7 @@ int managePackages(Context& context, ManagePackages::Mode mode)
 	cout << __("Resolving possible unmet dependencies... ") << endl;
 
 	bool addArgumentsFlag, thereIsNothingToDo;
-	auto callback = generateManagementPrompt(config, cache, worker,
-			showSizeChanges, showNotPreferred,
+	auto callback = generateManagementPrompt(config, cache, worker, showNotPreferred,
 			purgedPackageNames, addArgumentsFlag, thereIsNothingToDo);
 
 	resolve:
