@@ -694,6 +694,8 @@ Corresponding configuration option: L<cupt::console::actions-preview::show-versi
 when displaying actions preview prompt, display also changes in disk space
 usage for each package
 
+Corresponding configuration option: L<cupt::console::actions-preview::show-size-changes>
+
 =item --show-reasons,--show-deps,-D
 
 when displaying actions preview prompt, display also reasons why this action was
